package com.mascotin.salesapplication.catalogue;

public enum MetodoPago {
    Tarjeta, Transferencia
}
