package com.mascotin.salesapplication.model.catalogue;

public enum PetAge {
    CACHORRO, ADULTO, TODAS
}
