package com.mascotin.salesapplication.model.catalogue;

public enum PetBreed {
    PEQUENIA, MEDIANA, GRANDE, TODAS
}
