package com.mascotin.salesapplication.model.catalogue;

public enum PetSpecie {
    PERRO, GATO, AVE, TODAS
}
