package com.mascotin.salesapplication.model.catalogue;

public enum ProductBrand {
    PRONACA, AGRIPAC, BIOALIMENTAR, ALBEX
}
