package com.mascotin.salesapplication.model.catalogue;

public enum ProductCategory {
    ALIMENTO, ACCESORIO, INSUMO_VETERINARIO
}
