package com.mascotin.salesapplication.model.catalogue;

public enum ProductManufacturer {
    SOLDIS, EQUADIS, DISASVET, PORTALVET
}
